--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,21 @@ rvm:
   - jruby-head
 matrix:
   allow_failures:
+
   # NetHTTPUtils does not pass query params or smth
   - rvm: jruby-head
     os: osx
-  # the "Picked up _JAVA_OPTIONS: -Xmx2048m -Xms512m" output at jruby start ruins binstub tests
+
+  # the 'Picked up _JAVA_OPTIONS: -Xmx2048m -Xms512m' output at jruby start ruins binstub tests
   # TODO: -W0 does not help but probably there is another option or I should patch tests for jruby
   - rvm: jruby-head
+    os: linux
+
+  # the 'The command "bundle install --jobs=3 --retry=3" failed and exited with 1 during .'
+  # I guess Travis is deprecating old Rubies and so will I
+  - rvm: 2.0
+    os: linux
+  - rvm: 2.1
+    os: linux
+  - rvm: 2.2
     os: linux
