testing in more different environments

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,7 +4,16 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    timeout-minutes: 25
     steps:
     - uses: actions/checkout@v2
-    - run: docker run -e CI -v $(pwd):/checkout ruby:alpine sh -c "cd /checkout && apk add build-base && bundle install && source api_tokens_for_travis.sh && ruby test.rb"
-      timeout-minutes: 10
+    - run: docker run -e CI -v $(pwd):/checkout ruby:2.3-alpine sh -c "cd checkout &&                                                                  rm -f Gemfile.lock && apk add build-base && bundle install && source api_tokens_for_travis.sh && ruby test.rb"
+      timeout-minutes: 5
+    - run: docker run -e CI -v $(pwd):/checkout ruby:alpine3.6  sh -c "cd checkout &&                                                                  rm -f Gemfile.lock && apk add build-base && bundle install && source api_tokens_for_travis.sh && ruby test.rb"
+      timeout-minutes: 5
+    - run: docker run -e CI -v $(pwd):/checkout ruby:alpine     sh -c "cd checkout &&                                                                  rm -f Gemfile.lock && apk add build-base && bundle install && source api_tokens_for_travis.sh && ruby test.rb"
+      timeout-minutes: 5
+    - run: docker run -e CI -v $(pwd):/checkout alpine:3.6      sh -c "cd checkout && apk update && apk add ruby          && gem install -N bundler && rm -f Gemfile.lock && apk add build-base && bundle install && source api_tokens_for_travis.sh && ruby test.rb"
+      timeout-minutes: 5
+    - run: docker run -e CI -v $(pwd):/checkout alpine          sh -c "cd checkout &&               apk add ruby ruby-etc && gem install -N bundler && rm -f Gemfile.lock && apk add build-base && bundle install && source api_tokens_for_travis.sh && ruby test.rb"
+      timeout-minutes: 5
