--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,5 +15,5 @@ jobs:
       timeout-minutes: 2
     - run: docker run --rm -e CI -v $(pwd):/checkout alpine:3.7      sh -c "cd checkout && apk add ruby ruby-dev zlib-dev                          && gem install -N bundler && rm -f Gemfile.lock && apk add build-base git openssh && bundle install && bundle exec ruby unit.test.rb"
       timeout-minutes: 2
-    - run: docker run --rm -e CI -v $(pwd):/checkout alpine          sh -c "cd checkout && apk add ruby ruby-dev          ruby-etc ruby-bigdecimal && gem install -N bundler && rm -f Gemfile.lock && apk add build-base git openssh && bundle install && bundle exec ruby unit.test.rb"
+    - run: docker run --rm -e CI -v $(pwd):/checkout alpine          sh -c "cd checkout && apk add ruby ruby-dev zlib-dev ruby-etc ruby-bigdecimal && gem install -N bundler && rm -f Gemfile.lock && apk add build-base git openssh && bundle install && bundle exec ruby unit.test.rb"
       timeout-minutes: 2
